--- a/app/AppDir/Eclipse-CDT.desktop
+++ b/app/AppDir/Eclipse-CDT.desktop
@@ -5,7 +5,7 @@ Exec=AppRun %U
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=icon
+Icon=eclipse-cdt
 Categories=Development;
 StartupWMClass=Ecilpse-CDT
 StartupNotify=true
